<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Study Coordinator</string>
    <string name="welcome">Study Coordinator</string>
    <string name="notRegistered">New here? Sign up</string>
    <string name="action_settings">Settings</string>
    <string name="login">Sign in</string>
    <string name="register">Register</string>
    <string name="email">E-mail address</string>
    <string name="username">Username: </string>
    <string name="name">Name: </string>
    <string name="surname">Surname: </string>
    <string name="mail">Email: </string>
    <string name="password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_drawer_listview_item_main">Drawer_listview_item_main</string>
    <string name="my_groups">My groups</string>
    <string name="search">Search</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="events">Events</string>
    <string name="profil">Profil</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_group">Group</string>
    <string name="title_activity_register">Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="registertext">Register now to get started! =)</string>
    <string name="repeatpassword">Repeat password</string>
    <string name="backLogin">Back to login</string>
    <string name="editProfil">Edit profil</string>
    <string name="title_activity_activity_profil_edit">ActivityProfilEdit</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_list_view_example">ListViewExampleActivity</string>
    <string name="logout">Logout</string>
    <string name="title_activity_fragment_event">FragmentEvent</string>
    <string name="title_activity_fragment_group">FragmentGroup</string>
    <string name="title_activity_fragment_search">FragmentSearch</string>
    <string name="title_activity_event_details">EventDetails</string>
    <string name="title_activity_event_comments">EventComments</string>
    <string name="social">Social</string>
	<string name="menu_settings">Settings</string>
	<string name="title_activity_fragment_upcoming_events">Upcoming events</string>
	<string name="title_activity_fragment_social">Social</string>
	<string name="title_activity_fragment_profil">Profil</string>
	<string name="comment">Add your comment here!</string>
</resources>
