<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.study_coordinator.WelcomeActivity" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/singin"
        android:text="@string/login"
        android:width="180dp" />

    <View
        android:id="@+id/View1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/btnRegister"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:text="@string/notRegistered"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/editTextPass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:height="40dp"
        android:hint="@string/email"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:background="@drawable/userpass"/>

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

</RelativeLayout>