<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:orientation="horizontal"
    >
 
    <!--
    **************************IMPORTANT***********************************
     change this id attribute values as "frag2_icon" and "frag2_text" for
     fragment_layout_two.xml and "frag3_icon" and "frag3_text" for
     fragment_layout_three.xml
    **********************************************************************
      -->
 
    <ImageView
        android:id="@+id/frag_profil_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      />
 
    <TextView
        android:id="@+id/frag_profil_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        />
    	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    >
	    
    <ImageView         
        android:id="@+id/frag_profil_profil_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"        
        />
    <TextView 
        android:id="@+id/frag_profil_name_tv" 
        android:layout_below="@id/frag_profil_profil_image"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:text="@string/name"
              
        />

    <TextView
        android:id="@+id/frag_profil_surname_tv"
        android:layout_below="@id/frag_profil_name_tv"                 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:text="@string/surname"        
        />
    <TextView
        android:id="@+id/frag_profil_email_tv"         
        android:layout_below="@id/frag_profil_surname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:text="@string/mail"        
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/frag_profil_email_tv"
        android:layout_marginTop="28dp"
        android:text="Button" />
    
    </RelativeLayout>
</LinearLayout>
