<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!--
    ImageView
        android:id="@+id/frag_profil_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      />
 
    <TextView
        android:id="@+id/frag_profil_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" 
       /
    -->

    <ImageView
        android:id="@+id/frag_profil_edit_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/frag_profil_edit_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/frag_profil_edit_name_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/frag_profil_edit_surname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/frag_profil_edit_surname_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/frag_profil_edit_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/frag_profil_edit_email_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/edit_Profil_selectButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Select new image" />

        <Button
            android:id="@+id/edit_profil_uploadButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Click To Upload New Image" />

        <TextView
            android:id="@+id/edit_profil_messageText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000000"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/profil_edit_profile_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/singin"
            android:onClick="editProfil"
            android:text="@string/confirm"
            android:textColor="@android:color/black"
            android:width="180dp" />
    </RelativeLayout>

</LinearLayout>